# TwitterTGBot

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  get_timeline.h  keys  main.cpp  tg_bot.cpp  tg_bot.h
networklib/: Makefile  NetworkLibraryConfig.cmake  cmake_install.cmake  networklib.cbp
python/: Dockerfile  authorize.py
src/: get_timeline.cpp  login_with_twitter.cpp  login_with_twitter.h  tg_bot.cpp  tg_bot.h
twitterlib/: CTestTestfile.cmake  Makefile  TwitterLibraryConfig.cmake  cmake_install.cmake  twitterlib.cbp
twitterlib/include/twitterlib/rest_api/: rest_statuses.hpp
twitterlib/src/: rest_statuses.cpp  twitter_stream.cpp
